# Personal-assistant

./: README.md  main.py
Personal Assistant Old/: pyproject.toml
Personal Assistant Old/assets/: design_about.py  design_copy_excel.py  design_info.py  design_main_window.py  design_success.py  design_warning.py
Personal Assistant Old/windows/: temperature.py  window_copy_excel.py  window_report_card.py  window_success.py  window_vacation.py  window_warning.py
Personal Assistant Old/данные/: среднемесячная_температура_по_годам.xlsx  табель_сотрудников.xlsx
Personal Assistant Professional/: README.md
assets/: design_report_card.py  design_update.py  design_vacation.py
windows/: check_engeneer.py  window_about.py  window_info.py  window_update.py
данные/: график_отпусков.json  изменения_в_работе.txt  рабочая_область.txt
