[tool.poetry]
name = "personal-assistant"
version = "0.2.1"
description = ""
authors = ["Daniel-Astaptscev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.7.0"
apscheduler = "^3.10.4"
openpyxl = "^3.1.5"
requests = "^2.32.3"
pywin32 = "^306"
beautifulsoup4 = "^4.12.3"
pyqt6-webengine = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
